--- a/project/data/index.html
+++ b/project/data/index.html
@@ -483,7 +483,7 @@ J Jiang, Y Bock, and E Klein, Imaging slip evolution on the San Andreas fault du
 <div class="media author-card" itemscope itemtype="http://schema.org/Person">
   
   
-  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.JPG" itemprop="image" alt="Avatar">
+  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar">
   
 
   <div class="media-body">
