--- a/project/earthquake/index.html
+++ b/project/earthquake/index.html
@@ -476,7 +476,7 @@
 <div class="media author-card" itemscope itemtype="http://schema.org/Person">
   
   
-  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.JPG" itemprop="image" alt="Avatar">
+  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar">
   
 
   <div class="media-body">
