--- a/project/seas/index.html
+++ b/project/seas/index.html
@@ -502,7 +502,7 @@ Jiang, J., &amp; Erickson, B. A. (2018, 08). Advancing Simulations of Sequences 
 <div class="media author-card" itemscope itemtype="http://schema.org/Person">
   
   
-  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.JPG" itemprop="image" alt="Avatar">
+  <img class="portrait mr-3" src="/author/admin/avatar_hu4721c862a94b369064500f3976e90baf_239143_250x250_fill_q90_lanczos_center.jpg" itemprop="image" alt="Avatar">
   
 
   <div class="media-body">
