--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     
     
 
-    <p>Hi! I am a geophysicist, born and raised in China and trained in Southern California. I am fascinated by the dynamic processes of the Earth and strive to understand their underlying physical mechanisms and predictability, with the ultimate goals to improve the assessment and migitation of geo-hazards and safe, efficient exploration of geo-energy.</p>
+    <p>Hi! I am a geophysicist, born and raised in China and trained in Southern California. I am fascinated by the dynamic processes of the Earth and strive to understand their underlying physical mechanisms and predictability, with the ultimate goals to improve the assessment and migitation of geo-hazards and safe exploration of geo-energy.</p>
 
 <p>My current research is focused on Earth&rsquo;s deformation processes due to faulting and human activities over time scales spanning seconds to centuries, through a combination of geophysical observational techniques, primiarly Global Positioning System (GPS) and Interferometric Synthetic Aperture Radar (InSAR), seismicity catalogue, and laboratory-based mechanical models. Many of the problems I study are highly interdisciplinary, requiring knowledge from and collaborations across seismology, geodesy, geology, rock mechanics, computational science, remote sensing, civil and environmental engineering, etc.</p>
 
