update project description

--- a/project/computation/index.html
+++ b/project/computation/index.html
@@ -439,9 +439,9 @@
   <div class="article-container">
 
     <div class="article-style" itemprop="articleBody">
-      <p>Extracting important and relevant physics from data and developing models with predictive power will be a significant task in the future of Earth sciences. Many of my observation-oriented projects share the theme of utilizing <strong>a Bayesian probabilistic inference framework (analytical and numerical sampling approaches)</strong> with an emphasis on <strong>uncertainty quantification of observations and physical modeling</strong>, along with its impact on our predictions.</p>
+      <p>Extracting important and relevant physics from data and developing models with predictive power will be a significant task in the future of Earth sciences. Many of my observation-oriented projects share the theme of utilizing a Bayesian probabilistic inference framework (analytical and numerical sampling approaches) with an emphasis on uncertainty quantification of observations and physical modeling, along with its impact on our predictions.</p>
 
-<p>The second, complementary part of my research involves <strong>developing cross-scale computational models with detailed physics and predictive powers</strong> to understand earthquakes, tsunamis, or slow slip. We are also interested in the <strong>verification and validation</strong> of these complex models. I take a special interest in the synergy of developing inverse and forward modeling in geophysical problems to eventually improve observation-drive, physics-based inference about the future behavior of our Earth.</p>
+<p>The second, complementary part of my research involves developing cross-scale computational models with detailed physics and predictive powers to understand earthquakes, tsunamis, or slow slip. We are also interested in the verification and validation of these complex models. I take a special interest in the synergy of developing inverse and forward modeling in geophysical problems to eventually improve observation-drive, physics-based inference about the future behavior of our Earth.</p>
 
     </div>
 
