--- a/project/deformation/index.html
+++ b/project/deformation/index.html
@@ -439,9 +439,9 @@
   <div class="article-container">
 
     <div class="article-style" itemprop="articleBody">
-      <p>We study <strong>surface changes, ground deformation, and seismicity in various settings</strong>. We primarily use remote-sensing techniques, e.g., multi-temporal Interferometric Synthetic Aperture Radar (InSAR) and GPS, and other auxiliary datasets to characterize robust ground deformation history in regions under the influences of <strong>tectonics (e.g., fault-zone deformation), surficial processes (e.g., soil moisture), and/or anthropogenic activities (e.g., agriculture and energy production)</strong>.</p>
+      <p>We study surface changes, ground deformation, and seismicity in various settings. We primarily use remote-sensing techniques, e.g., multi-temporal Interferometric Synthetic Aperture Radar (InSAR) and GPS, and other auxiliary datasets to characterize robust ground deformation history in regions under the influences of tectonics (e.g., fault-zone deformation), surficial processes (e.g., soil moisture), and/or anthropogenic activities (e.g., agriculture and energy production).</p>
 
-<p>Our focus is on the connections between surface observations and subsurface processes, including the existence or absence of seismicity. The overarching goal is to improve our understanding of earthquake triggering and the state and heterogeneity of stress in the shallow crust. Our research areas include <strong>Central and Southern California, Oklahoma, and Southern Kansas</strong>.</p>
+<p>Our focus is on the connections between surface observations and subsurface processes, including the existence or absence of seismicity. The overarching goal is to improve our understanding of earthquake triggering and the state and heterogeneity of stress in the shallow crust. Our research areas include Central and Southern California, Oklahoma, and Southern Kansas.</p>
 
     </div>
 
