--- a/404.html
+++ b/404.html
@@ -331,7 +331,7 @@
     </ul>
     
     <ul>
-      <li><a href="/project/deformation/">Surface Changes, Ground Deformation, and Seismicity</a></li>
+      <li><a href="/project/deformation/">Land Surface Changes, Ground Deformation, and Seismicity</a></li>
     </ul>
     
     <ul>
