--- a/project/deformation/index.html
+++ b/project/deformation/index.html
@@ -141,7 +141,7 @@
   
   <meta property="og:site_name" content="">
   <meta property="og:url" content="https://jjle.github.io/project/deformation/">
-  <meta property="og:title" content="Surface Changes, Ground Deformation, and Seismicity | ">
+  <meta property="og:title" content="Land Surface Changes, Ground Deformation, and Seismicity | ">
   <meta property="og:description" content="Characterizing near-surface and subsurface processes in industrial and tectonic settings"><meta property="og:image" content="https://jjle.github.io/project/deformation/featured.png">
   <meta property="og:locale" content="en-us">
   
@@ -154,7 +154,7 @@
 
   
 
-  <title>Surface Changes, Ground Deformation, and Seismicity | </title>
+  <title>Land Surface Changes, Ground Deformation, and Seismicity | </title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -331,7 +331,7 @@
   
   
 <div class="article-container pt-3">
-  <h1 itemprop="name">Surface Changes, Ground Deformation, and Seismicity</h1>
+  <h1 itemprop="name">Land Surface Changes, Ground Deformation, and Seismicity</h1>
 
   
 
@@ -373,7 +373,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity&amp;url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f"
+         href="https://twitter.com/intent/tweet?text=Land%20Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity&amp;url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f"
          target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
@@ -387,21 +387,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f&amp;title=Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f&amp;title=Land%20Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity"
          target="_blank" rel="noopener">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f&amp;title=Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity"
+         href="http://service.weibo.com/share/share.php?url=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f&amp;title=Land%20Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity"
          target="_blank" rel="noopener">
         <i class="fab fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity&amp;body=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f">
+         href="mailto:?subject=Land%20Surface%20Changes%2c%20Ground%20Deformation%2c%20and%20Seismicity&amp;body=https%3a%2f%2fjjle.github.io%2fproject%2fdeformation%2f">
         <i class="fas fa-envelope"></i>
       </a>
     </li>
