--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
     <p>Hi! I am a geophysicist, born and raised in China and trained in Southern California. I am fascinated by the dynamic processes of the Earth and strive to understand their underlying mechanisms, predictability, and societal impacts, with the goals to improve the assessment and migitation of geo-hazards and safe, sustainable exploration of geo-energy.</p>
 
-<p>My research is focused on crustal deformation and seismicity due to tectonic and human activities over timescales spanning seconds to centuries, through an integration of laboratory-based physical models and geophysical observations, in particular from Global Navigation Satellite System (GNSS) and Interferometric Synthetic Aperture Radar (InSAR). I am also passionate about uncertainty quantification in geophysical research. Many of the problems I study are interdisciplinary, requiring knowledge from and collaborations across disciplines such as seismology, geodesy, geology, rock mechanics, civil and environmental engineering, etc.</p>
+<p>My research is focused on microseismicity, large earthquakes, and crustal deformation due to tectonic and human activities over timescales from seconds to centuries, through integrating laboratory-based physical models and geophysical observations, in particular from Global Navigation Satellite System (GNSS) and Interferometric Synthetic Aperture Radar (InSAR). I am also passionate about uncertainty quantification in geophysical research. Many of the problems I study are interdisciplinary, requiring knowledge from and collaborations across disciplines such as seismology, geodesy, geology, rock mechanics, civil and environmental engineering, etc.</p>
 
 <p>I started as an Assistant Professor of Geophysics in the <a href="http://www.ou.edu/mcee/geosciences" target="_blank">School of Geosciences at the University of Oklahoma</a> in Fall 2020. <strong>I am looking to recruit several MS/PhD students and a postdoc to join the team. Please contact me for research opportunities if you are interested!</strong></p>
 
@@ -800,6 +800,8 @@
 <p><strong>GPHY 3440</strong> &ndash; Mentored Research Experience (<em>2021 Spring</em>)</p>
 
 <p><strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (<em>2021 Fall</em>)</p>
+
+<p><strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (<em>2021 Fall</em>; Co-Instructor)</p>
 
     </div>
   
