--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     
     
 
-    <p>Hi! My research group study the dynamics and societal impact of the Earth’s crustal processes due to natural forces or human activities, including microseismicity, large earthquakes, fault creep, ground uplift and subsidence&mdash;their behaviors and interactions&mdash;in geothermal fields, crustal faults, and subduction zones from societal to geological timescales.</p>
+    <p>Hi! My research group study the dynamics and impacts of the Earth’s crustal processes due to natural forces or human activities, including microseismicity, large earthquakes, fault creep, ground uplift and subsidence&mdash;their behaviors and interactions&mdash;in geothermal fields, crustal faults, and subduction zones from societal to geological timescales.</p>
 
 <p>We address the scientific problems using a combination of geodetic imaging (e.g., Global Navigation Satellite Systems &amp; Interferometric Synthetic Aperture Radar), seismological observations (e.g., seismicity &amp; structure), and laboratory-based computational modeling, along with a particular interest in multiscale inference and uncertainty quantification in geophysical datasets. Through such interdisciplinary efforts, we hope to better understand and assess geohazards, e.g., earthquakes, tsunamis, landslides, and to improve safe, sustainable subsurface exploration, e.g., during hydraulic fracturing, geothermal energy production, and carbon storage.</p>
 
