--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <p><strong>GEOL 1114</strong> &ndash; Physical Geology for Scientists and Engineers (<em>2020 Fall</em>)</p>
+      <p><strong>GEOL 1114</strong> &ndash; Physical Geology for Scientists and Engineers (<em>2020 Fall, 2022 Spring</em>)</p>
 
 <p><strong>GPHY 5020</strong> &ndash; Computational Geophysics (<em>2021 Spring</em>) </p>
 
@@ -801,7 +801,11 @@
 
 <p><strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (<em>2021 Fall</em>)</p>
 
-<p><strong>GPHY 3013</strong> &ndash; Data Analysis in Geoscience (<em>2022 Spring</em>)</p>
+<p><strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences (<em>2021 Fall</em>; Co-Instructor)</p>
+
+<p><strong>GPHY 4553</strong> &ndash; Introduction to Seismology (<em>2022 Spring</em>)</p>
+
+<p><strong>GPHY 2013</strong> &ndash; Frontiers in Geophysics (<em>2022 Spring</em>; Co-Instructor)</p>
 
     </div>
   
