fix typos in cv/bio

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
           
         
         <li>
-          <a itemprop="sameAs" href="/files/cv_jjiang_202108.pdf" >
+          <a itemprop="sameAs" href="/files/cv_jjiang_202109.pdf" >
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
@@ -801,7 +801,7 @@
 
 <p><strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (<em>2021 Fall</em>)</p>
 
-<p><strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences (<em>2021 Fall</em>; Co-Instructor)</p>
+<p><strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (<em>2021 Fall</em>; Co-Instructor)</p>
 
 <p><strong>GPHY 4553</strong> &ndash; Introduction to Seismology (<em>2022 Spring</em>)</p>
 
