--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       
 
       <div class="portrait-title">
-        <h2 itemprop="name">Junle Jiang 蔣君樂</h2>
+        <h2 itemprop="name">Junle Jiang</h2>
         <h3 itemprop="jobTitle">Assistant Professor of Geophysics</h3>
 
         
