--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -391,7 +391,7 @@
           <div class="article-style" itemprop="articleBody">
             <p>I always look forward to working with motivated undergraduates, MS/PhD graduate students, and postdoctoral researchers, in fully-funded research projects.</p>
 
-<p>Please read the following guidelines and contact me if you are interested! For all inquiries, please include your <strong>self-introduction, motivation, and CV/resume</strong> in the email.</p>
+<p>Please read the general guidelines below and contact me if you are interested! For all inquiries, please include your <strong>self-introduction, motivation, and CV/resume</strong> in the email.</p>
 
 <ul>
 <li><strong>Undergraduate Students</strong>:
@@ -402,9 +402,9 @@ You are encouraged to take some introductory geophysics course(s) (e.g., <em>GPH
 
 <ul>
 <li><p><strong>MS Students</strong>:
-You should express about your general research interests, desired disciplinary knowledge and skillsets, and a career plan for professional work or PhD-level research in future.</p></li>
+You should mention your general research interests, desired disciplinary knowledges and skillsets, and a preliminary career plan for professional work or PhD-level research in future.</p></li>
 
-<li><p><strong>PhD Students</strong>: You are expected to describe the broad scientific (and/or engineering) problem(s) that you would like to pursue with my mentorship, and explain how your research interests and career plan fit in well with OU Geophysics Program and our research group.</p></li>
+<li><p><strong>PhD Students</strong>: You are expected to describe the broad scientific and/or engineering problem(s) that you would like to pursue with my mentorship, and explain how your research interests and career plan fit in well with OU Geophysics Program and our research group.</p></li>
 
 <li><p><strong>Postdoctoral Researchers</strong>: Feel free to propose or inquire about research project(s) of our mutual interests, and envision how the diverse expertise/resources of OU Geosciences program and our group can help you advance your career.</p></li>
 </ul>
