--- a/publication/tymofyeyeva-2019/index.html
+++ b/publication/tymofyeyeva-2019/index.html
@@ -585,6 +585,18 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/deformation/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/earthquake/">
+    Project
+  </a>
+  
+
 
 
 
