--- a/publication/duputel-2015/index.html
+++ b/publication/duputel-2015/index.html
@@ -656,7 +656,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Geophysical research letters</em></div>
+          <div class="col-12 col-md-9"><em>Geophysical Research Letters</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
