--- a/index.html
+++ b/index.html
@@ -862,11 +862,11 @@
       <p><strong>Graduate / Upper Undergrad Level Courses</strong></p>
 
 <p><strong>GPHY 5020</strong> &ndash; Computational Geophysics (2021S, 2023S*) <br />
-<strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (2021F, 2023F*) <br />
+<strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (2021F) <br />
 <strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (2021F; Co-Instructor) <br />
-<strong>GPHY 5413</strong> &ndash; Global Geophysics (2022F, 2023F*) <br />
+<strong>GPHY 5413</strong> &ndash; Global Geophysics (2022F*) <br />
 <strong>GPHY 4553</strong> &ndash; Introduction to Seismology (2022S) <br />
-<strong>GPHY 5970</strong> &ndash; Geophysical Journal Seminar (2022S, 2022F)</p>
+<strong>GPHY 5970</strong> &ndash; Geophysical Journal Seminar (2022S, 2022F*)</p>
 
 <p><strong>Lower Undergrad Level Courses</strong></p>
 
@@ -875,7 +875,7 @@
 <strong>GPHY 3013</strong> &ndash; Data Analysis for Geoscience (2023S*) <br />
 <strong>GPHY 2013</strong> &ndash; Frontiers in Geophysics (2023S*; Co-Instructor)</p>
 
-<p>* Courses in upcoming spring/fall (S/F) semesters</p>
+<p>*Courses planned for upcoming semesters</p>
 
     </div>
   
