--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
     <div class="portrait-title">
       <h2>Haoyu Li</h2>
       <h3>MSc Student (2021-)</h3>
-      <p class="people-interests">Imaging post-rupture fault zone evolution</p>
+      <p class="people-interests">Imaging post-rupture fault zone evolution at Parkfield, CA</p>
     </div>
   </div>
 
