update teaching info

--- a/index.html
+++ b/index.html
@@ -973,19 +973,19 @@
       <p><a href="teaching" target="_blank">Course descriptions</a></p>
     </div>
     <div class="col-12 col-lg-8">
-      <p><strong>Graduate / Upper Undergrad Level Courses</strong></p>
+      <p><font size="4.5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
 
 <p><strong>GPHY 5020</strong> &ndash; Computational Geophysics (2021S, 2023S*) <br />
 <strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (2021F) <br />
-<strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (2021F; Co-Instructor) <br />
 <strong>GPHY 5413</strong> &ndash; Global Geophysics (2022F*) <br />
 <strong>GPHY 4553</strong> &ndash; Introduction to Seismology (2022S) <br />
-<strong>GPHY 5970</strong> &ndash; Geophysical Journal Seminar (2022S, 2022F*)</p>
+<strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (2021F; Co-Instructor) <br />
+<strong>GPHY 5970</strong> &ndash; Geophysical Journal Seminar (2022S, 2022F*) <br />
+<strong>GPHY 3440</strong> &ndash; Mentored Research Experience (2021S) </p>
 
-<p><strong>Lower Undergrad Level Courses</strong></p>
+<p><font size="4.5"><strong>Lower Undergraduate Level Courses</strong></font></p>
 
 <p><strong>GEOL 1114</strong> &ndash; Physical Geology for Scientists and Engineers (2020F, 2022S) <br />
-<strong>GPHY 3440</strong> &ndash; Mentored Research Experience (2021S) <br />
 <strong>GPHY 3013</strong> &ndash; Data Analysis for Geoscience (2023S*) <br />
 <strong>GPHY 2013</strong> &ndash; Frontiers in Geophysics (2023S*; Co-Instructor)</p>
 
