--- a/teaching/index.html
+++ b/teaching/index.html
@@ -408,29 +408,43 @@
           <h1 itemprop="name">Courses</h1>
 
           <div class="article-style" itemprop="articleBody">
-            <p><strong>GEOL 1114 – Physical Geology for Scientists and Engineers (2020F, 2022S)</strong> <br />
-Plate tectonics, the makeup of continents and mountain building. Heat flow, magnetism, gravity, rock deformation, earthquakes and the earth&rsquo;s interior. Surface processes including weathering, erosion, transport and deposition. Landforms, rivers, groundwater, glaciers, ocean processes, and volcanoes. Minerals and rocks. Application of geology to land-use, groundwater, mineral and fossil fuel exploration. Laboratory included.</p>
+            <p><font size="5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
 
-<p><strong>GPHY 5020 – Computational Geophysics (2021S, 2023S)</strong> <br />
+<p><font size="4"><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S^)</strong></font> <br />
 Fundamental concepts of numerical modeling in solid Earth geophysics, including the mathematical formulation of finite difference (FDM) and finite element (FEM) methods and their applications in a range of geophysical problems such as the heat and fluid flow, deformation, and wave propagation. Students learn MATLAB/Python programming for these methods and review topics on computational methods in seismology, geomechanics, and geodynamics.</p>
 
-<p><strong>GPHY 3440 – Mentored Research Experience (2021S)</strong> <br />
+<p><font size="4"><strong>GPHY5970 Remote Sensing for Crustal Geophysics &ndash; 3 credits (2021F)</strong></font> <br />
+Fundamentals of remote sensing techniques and geodetic observations from current and future satellite missions and explore quantitative methods to characterize and constrain the properties and processes of the Earth’s geosphere (e.g., coastal change, natural resources exploitation, natural and manmade hazards) and hydrosphere (e.g., extraction/renewal of groundwater). Introduction of basic forward and inverse modeling approaches for parameter estimation of subsurface models using remotely sensed data.</p>
+
+<p><font size="4"><strong>GPHY4553 Introduction to Seismology &ndash; 3 credits (2022S)</strong></font> <br />
+This course presents an overview of seismology to introduce students to the fundamentals of seismic wave, quantitative data analyses, and the utilization of seismic wave for the study of earthquakes and the Earth&rsquo;s interior structure. Students will gain hand-on experiences with real data analysis.</p>
+
+<p><font size="4"><strong>GPHY5413 Global Geophysics &ndash; 3 credits (2022F)</strong></font> <br />
+Introduces students to geophysical methods, the structure and physical properties of earth&rsquo;s interior, active processes on earth, and the use of geophysical methods to study structure and processes.</p>
+
+<p><font size="4"><strong>GPHY3440 Mentored Research Experience &ndash; 1 credit (2021S)</strong></font> <br />
 For the inquisitive student to apply the scholarly processes of the discipline to a research or creative project under the mentorship of a faculty member.</p>
 
-<p><strong>GPHY 5970 – Remote Sensing for Crustal Geophysics (2021F)</strong> <br />
-Fundamentals of remote sensing techniques and geodetic observations from current and future satellite missions and explore quantitative methods to characterize and constrain the properties and processes of the Earth’s geosphere (e.g., coastal change, natural resources exploitation, natural and manmade hazards) and hydrosphere (e.g., extraction/renewal of groundwater). Introduction of basic forward and inverse modeling approaches for parameter estimation of subsurface models using remotely sensed data. <em>For upper-class undergraduates and graduate students.</em></p>
-
-<p><strong>GPHY 6970 – Machine Learning in Geosciences Seminar (2021F; Co-Instructor)</strong>
+<p><font size="4"><strong>GPHY6970 Machine Learning in Geosciences Seminar &ndash; 1 credit (2021F; Co-Instructor)</strong></font> <br />
 To introduce Geoscience students to the basic methods of machine learning in a seminar setting, with discussion and brainstorming of ideas.</p>
 
-<p><strong>GPHY 4553 – Introduction to Seismology (2022S)</strong> <br />
-This course presents an overview of seismology to introduce students to the fundamentals of seismic wave, quantitative data analyses, and the utilization of seismic wave for the study of earthquakes and the Earth&rsquo;s interior structure. Students will gain hand-on experiences with real data analysis. <em>For upper-class undergraduates and graduate students.</em></p>
+<p><font size="4"><strong>GPHY5970 Geophysical Journal Seminar &ndash; 1&ndash;3 credits(2022S, 2022F)</strong></font> <br />
+Review and discuss recent literature in the broad areas of solid Earth and exploration geophysics </p>
 
-<p><strong>GPHY 5413 – Global Geophysics (2022F)</strong> <br />
-Introduces students to geophysical methods, the structure and physical properties of earth&rsquo;s interior, active processes on earth, and the use of geophysical methods to study structure and processes. <em>For upper-class undergraduates and graduate students.</em></p>
+<p>&nbsp;</p>
 
-<p><strong>GPHY 2013 – Frontiers in Geophysics (2023S; Co-Instructor)</strong> <br />
+<p><font size="5"><strong>Lower Undergraduate Level Courses</strong></font></p>
+
+<p><font size="4"><strong>GEOL1114 Physical Geology for Scientists and Engineers &ndash; 3 credits (2020F, 2022S)</strong></font> <br />
+Plate tectonics, the makeup of continents and mountain building. Heat flow, magnetism, gravity, rock deformation, earthquakes and the earth&rsquo;s interior. Surface processes including weathering, erosion, transport and deposition. Landforms, rivers, groundwater, glaciers, ocean processes, and volcanoes. Minerals and rocks. Application of geology to land-use, groundwater, mineral and fossil fuel exploration. Laboratory included.</p>
+
+<p><font size="4"><strong>GPHY3013 – Data Analysis for Geoscience &ndash; 3 credits (2023S^)</strong></font> <br />
+This course introduces theories and techniques in quantitative data analysis, including data visualization, probability theory, linear models, periodicity detection, filtering, correlation, interpolation, approximations, and hypothesis testing. These concepts and methods are applied to several datasets in the study of the atmosphere, streams, groundwater, seafloor, earthquakes, etc. Examples are demonstrated in MATLAB programming environment.</p>
+
+<p><font size="4"><strong>GPHY2013 Frontiers in Geophysics &ndash; 1 credit (2023S^; Co-Instructor)</strong></font> <br />
 Introduction to the basic theories, methods, and modern applications of geophysics. This sampler course will address topics such as, but not limited to: Electrical resistivity imaging, seismology, deep earth geophysics, remote sensing, reflection seismology, computational geophysics, and machine learning.</p>
+
+<p>^ Planned in future semesters</p>
 
           </div>
 
