update December CV

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -429,7 +429,7 @@
           <div class="article-style" itemprop="articleBody">
             <p><font size="5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
 
-<p><font size="4"><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S^)</strong></font> <br />
+<p><font size="4"><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S)</strong></font> <br />
 Fundamental concepts of numerical modeling in solid Earth geophysics, including the mathematical formulation of finite difference (FDM) and finite element (FEM) methods and their applications in a range of geophysical problems such as the heat and fluid flow, deformation, and wave propagation. Students learn MATLAB/Python programming for these methods and review topics on computational methods in seismology, geomechanics, and geodynamics.</p>
 
 <p><font size="4"><strong>GPHY5970 Remote Sensing for Crustal Geophysics &ndash; 3 credits (2021F)</strong></font> <br />
@@ -457,13 +457,11 @@ Review and discuss recent literature in the broad areas of solid Earth and explo
 <p><font size="4"><strong>GEOL1114 Physical Geology for Scientists and Engineers &ndash; 3 credits (2020F, 2022S)</strong></font> <br />
 Plate tectonics, the makeup of continents and mountain building. Heat flow, magnetism, gravity, rock deformation, earthquakes and the earth&rsquo;s interior. Surface processes including weathering, erosion, transport and deposition. Landforms, rivers, groundwater, glaciers, ocean processes, and volcanoes. Minerals and rocks. Application of geology to land-use, groundwater, mineral and fossil fuel exploration. Laboratory included.</p>
 
-<p><font size="4"><strong>GPHY3013 – Data Analysis for Geoscience &ndash; 3 credits (2023S^)</strong></font> <br />
+<p><font size="4"><strong>GPHY3013 – Data Analysis in Geoscience &ndash; 3 credits (2023S)</strong></font> <br />
 This course introduces theories and techniques in quantitative data analysis, including data visualization, probability theory, linear models, periodicity detection, filtering, correlation, interpolation, approximations, and hypothesis testing. These concepts and methods are applied to several datasets in the study of the atmosphere, streams, groundwater, seafloor, earthquakes, etc. Examples are demonstrated in MATLAB programming environment.</p>
 
-<p><font size="4"><strong>GPHY2013 Frontiers in Geophysics &ndash; 1 credit (2023S^; Co-Instructor)</strong></font> <br />
+<p><font size="4"><strong>GPHY2013 Frontiers of Geophysics &ndash; 1 credit (2023S; Co-Instructor)</strong></font> <br />
 Introduction to the basic theories, methods, and modern applications of geophysics. This sampler course will address topics such as, but not limited to: Electrical resistivity imaging, seismology, deep earth geophysics, remote sensing, reflection seismology, computational geophysics, and machine learning.</p>
-
-<p>^ Planned in future semesters</p>
 
           </div>
 
