--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 
     <div class="portrait-title">
       <h2>Calvin Rutkauskas</h2>
-      <h3>BS in Geography (2022 Summer)</h3>
+      <h3>BS Geography &amp; Geology (2022)</h3>
       <p class="people-interests">SAR analysis of land disturbance</p>
     </div>
   </div>
@@ -1017,21 +1017,27 @@
       <p><a href="teaching" target="_blank">Course descriptions</a></p>
     </div>
     <div class="col-12 col-lg-8">
-      <p><font size="4.5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
+      <style>
+r { color: Red }
+o { color: Orange }
+g { color: Gray }
+</style>
 
-<p><strong>GPHY 5020</strong> &ndash; Computational Geophysics (2021S, 2023S) <br />
-<strong>GPHY 5970</strong> &ndash; Remote Sensing for Crustal Geophysics (2021F) <br />
-<strong>GPHY 5413</strong> &ndash; Global Geophysics (2022F) <br />
-<strong>GPHY 4553</strong> &ndash; Introduction to Seismology (2022S) <br />
-<strong>GPHY 6970</strong> &ndash; Machine Learning in Geosciences Seminar (2021F; Co-Instructor) <br />
-<strong>GPHY 5970</strong> &ndash; Geophysical Journal Seminar (2022S, 2022F) <br />
-<strong>GPHY 3440</strong> &ndash; Mentored Research Experience (2021S, 2022Su) </p>
+<p><font size="4.5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
+
+<p><strong>GPHY5020</strong> &mdash; Computational Geophysics <em>(2021S, 2023S)</em> <br />
+<strong>GPHY5970</strong> &mdash; Remote Sensing and Geodesy <em>(2021F, 2023F)</em> <br />
+<strong>GPHY5413</strong> &mdash; Global Geophysics <em>(2022F, 2023F)</em> <br />
+<strong>GPHY4553</strong> &mdash; Introduction to Seismology <em>(2022S)</em> <br />
+<strong>GPHY6970</strong> &mdash; Machine Learning in Geosciences Seminar <em>(2021F; Co-Instructor)</em> <br />
+<strong>GPHY5970</strong> &mdash; Geophysical Journal Seminar <em>(2022S, 2022F)</em> <br />
+<strong>GPHY3440</strong> &mdash; Mentored Research Experience <em>(2021S, 2022Su)</em> </p>
 
 <p><font size="4.5"><strong>Lower Undergraduate Level Courses</strong></font></p>
 
-<p><strong>GEOL 1114</strong> &ndash; Physical Geology for Scientists and Engineers (2020F, 2022S) <br />
-<strong>GPHY 3013</strong> &ndash; Data Analysis in Geoscience (2023S) <br />
-<strong>GPHY 2013</strong> &ndash; Frontiers of Geophysics (2023S; Co-Instructor)</p>
+<p><strong>GEOL1114</strong> &mdash; Physical Geology for Scientists and Engineers <em>(2020F, 2022S)</em> <br />
+<strong>GPHY3013</strong> &mdash; Data Analysis in Geoscience <em>(2023S)</em> <br />
+<strong>GPHY2013</strong> &mdash; Frontiers of Geophysics <em>(2023S; Co-Instructor)</em></p>
 
     </div>
   
