--- a/teaching/index.html
+++ b/teaching/index.html
@@ -432,13 +432,13 @@
 <p><font size="4"><strong>GPHY5020 Computational Geophysics &ndash; 3 credits (2021S, 2023S)</strong></font> <br />
 Fundamental concepts of numerical modeling in solid Earth geophysics, including the mathematical formulation of finite difference (FDM) and finite element (FEM) methods and their applications in a range of geophysical problems such as the heat and fluid flow, deformation, and wave propagation. Students learn MATLAB/Python programming for these methods and review topics on computational methods in seismology, geomechanics, and geodynamics.</p>
 
-<p><font size="4"><strong>GPHY5970 Remote Sensing for Crustal Geophysics &ndash; 3 credits (2021F)</strong></font> <br />
+<p><font size="4"><strong>GPHY5970 Remote Sensing and Geodesy &ndash; 3 credits (2021F, 2023F)</strong></font> <br />
 Fundamentals of remote sensing techniques and geodetic observations from current and future satellite missions and explore quantitative methods to characterize and constrain the properties and processes of the Earth’s geosphere (e.g., coastal change, natural resources exploitation, natural and manmade hazards) and hydrosphere (e.g., extraction/renewal of groundwater). Introduction of basic forward and inverse modeling approaches for parameter estimation of subsurface models using remotely sensed data.</p>
 
 <p><font size="4"><strong>GPHY4553 Introduction to Seismology &ndash; 3 credits (2022S)</strong></font> <br />
 This course presents an overview of seismology to introduce students to the fundamentals of seismic wave, quantitative data analyses, and the utilization of seismic wave for the study of earthquakes and the Earth&rsquo;s interior structure. Students will gain hand-on experiences with real data analysis.</p>
 
-<p><font size="4"><strong>GPHY5413 Global Geophysics &ndash; 3 credits (2022F)</strong></font> <br />
+<p><font size="4"><strong>GPHY5413 Global Geophysics &ndash; 3 credits (2022F, 2023F)</strong></font> <br />
 Introduces students to geophysical methods, the structure and physical properties of earth&rsquo;s interior, active processes on earth, and the use of geophysical methods to study structure and processes.</p>
 
 <p><font size="4"><strong>GPHY3440 Mentored Research Experience &ndash; 1&ndash;3 credits (2021S, 2022Su)</strong></font> <br />
