update course title

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ g { color: Gray }
 <p><font size="4.5"><strong>Graduate / Upper Undergraduate Level Courses</strong></font></p>
 
 <p><strong>GPHY5020</strong> &mdash; Computational Geophysics <em>(2021S, 2023S)</em> <br />
-<strong>GPHY5970</strong> &mdash; Remote Sensing and Geodesy <em>(2021F, 2023F)</em> <br />
+<strong>GPHY5970</strong> &mdash; Remote Sensing &amp; Space Geodesy <em>(2021F, 2023F)</em> <br />
 <strong>GPHY5413</strong> &mdash; Global Geophysics <em>(2022F, 2023F)</em> <br />
 <strong>GPHY4553</strong> &mdash; Introduction to Seismology <em>(2022S)</em> <br />
 <strong>GPHY6970</strong> &mdash; Machine Learning in Geosciences Seminar <em>(2021F; Co-Instructor)</em> <br />
