--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
     
 
     <div class="portrait-title">
-      <h2>Jose Viteri</h2>
+      <h2>Jose Viteri Lopez</h2>
       <h3>MS Student (2023-)</h3>
       <p class="people-interests">Megathrust Seismicity; Subduction Zone; Bayesian Inversion</p>
     </div>
